--- a/contact.css
+++ b/contact.css
@@ -1,44 +1,31 @@
-/*body {
-     Ici on utilise le sélecteur body pour appliquer une police et une taille par défaut pour les éléments 
-    font-family: 'Manrope', sans-serif;
-    font-size: 1em;
-    background-image: url(background\ site\ web.jpg) ;
-    text-align: justify;
-    color: aliceblue;
-}*/
-h1, h2, h3, p, ul {
-    text-align: left; /* Alignement horizontal du texte à gauche à l'intérieur du contenu principal */
-  }
-
-p {
-    color: aliceblue;
-    font-size: 1em;
-    font-family: 'Montserrat', sans-serif;
-    width: 50%;
-    text-align: justify;
-    padding: 16px;
-    margin: 50px;
+form {
+    max-width: 400px;
+    margin: 0 auto;
 }
 
-a {
-    color: aliceblue;
-    font-style: normal;
+label {
+    display: block;
+    margin-bottom: 8px;
 }
 
-h1 {
-    color: aliceblue;
-    font-size: 1.3em;
-
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
 }
 
-h2 {
-    color: aliceblue;
-    font-size: 1.3em;
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-h3 {
-    color: aliceblue;
-    font-size: 1.3em;
+button:hover {
+    background-color: #45a049;
 }
 
 *{
@@ -54,10 +41,8 @@ body{
     background: linear-gradient(to bottom, #30cfd0, #330867 );
     color: #fff;
     margin: 0;
+    padding: 0;
     height: 100vh;
-    text-align: justify;
-    padding: 20px;
-    margin-left: 2cm;
 }
 .container{
     padding: 9px 5%;
